--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Skar.IS",
+  "name": "skar-is",
   "version": "0.0.1",
   "description": "CSS library improving the development of websites graphical interface",
   "repository": "https://github.com/skaryys/Skar.IS.git",
