--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-autoprefixer": "^4.1.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-size": "^3.0.0",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "gulp-concat": "^2.6.1"
   }
 }
