--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "skar-is",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "CSS library improving the development of websites graphical interface",
   "repository": "https://github.com/skaryys/Skar.IS.git",
-  "author": "Martin Škára <martin.skara@hendur.eu>(http://hendur.eu)",
+  "author": "Martin Škára <jsem@skaramart.in>(http://hendur.eu)",
   "license": "MIT",
   "main": "dist/main",
   "style": "dist/main.css",
@@ -11,11 +11,12 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "run-sequence": "^2.2.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-autoprefixer": "^4.1.0",
-    "gulp-cssnano": "^2.1.2",
+    "gulp-sass": "^4.0.2",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-cssnano": "^2.1.3",
     "gulp-size": "^3.0.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-concat": "^2.6.1"
+    "gulp-uglify": "^3.0.1",
+    "gulp-concat": "^2.6.1",
+    "natives": "^1.1.6"
   }
 }
